GenShen: Old generation reference process is never reset

XMLWordPrintable

    • gc
    • generic

      Shenandoah's reference processor workers keep state in thread local variables that need to be `reset` during init mark. Prior to this change, this was not happening for the old generation - resulting in an accumulation of counters.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: