8321605: GenShen: Old generation reference process is never reset

Reviewed-by: kdnilsen